<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_d"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us_na"
        android:textSize="30sp"
        android:layout_below="@id/det"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P_wd"
        android:textSize="30sp"
        android:layout_below="@id/det0"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FNa"
        android:textSize="30sp"
        android:layout_below="@id/det1"
        android:textStyle="bold" />
    <TextView
      android:id="@+id/det3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/MNa"
      android:textSize="30sp"
      android:layout_below="@id/det2"
      android:textStyle="bold" />
    <TextView
        android:id="@+id/det4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LNa"
        android:textSize="30sp"
        android:layout_below="@id/det3"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phno"
        android:textSize="30sp"
        android:layout_below="@id/det4"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30sp"
        android:layout_below="@id/det5"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="30sp"
        android:layout_below="@id/det6"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st"
        android:textSize="30sp"
        android:layout_below="@id/det7"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/det9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        android:textSize="30sp"
        android:layout_below="@id/det8"
        android:textStyle="bold" />
    <Button
        android:id="@+id/pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/det9"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/proj"
        android:onClick="pro_det"
        android:textSize="16sp" />
  </RelativeLayout>
</ScrollView>