<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_d"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/det"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/det0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us_na"
            android:textSize="30sp"
            android:layout_below="@id/det"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_wd"
            android:textSize="30sp"
            android:layout_below="@id/det0"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FNa"
            android:textSize="30sp"
            android:layout_below="@id/det1"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MNa"
            android:textSize="30sp"
            android:layout_below="@id/det2"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LNa"
            android:textSize="30sp"
            android:layout_below="@id/det3"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phno"
            android:textSize="30sp"
            android:layout_below="@id/det4"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="30sp"
            android:layout_below="@id/det5"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="30sp"
            android:layout_below="@id/det6"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st"
            android:textSize="30sp"
            android:layout_below="@id/det7"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/det9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textSize="30sp"
            android:layout_below="@id/det8"
            android:textStyle="bold" />
        <Button
            android:id="@+id/pro"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_below="@id/det9"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/pro_cre"
            android:onClick="pro_cre"
            android:textStyle="bold"
            android:textSize="16sp" />
        <Button
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:id="@+id/list"
            android:layout_centerHorizontal="true"
            android:text="@string/list_em"
            android:layout_margin="10dp"
            android:onClick="list_em"
            android:textStyle="bold"
            android:layout_below="@id/pro"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:layout_below="@id/list"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="ADD"
            android:onClick="newEmp"
            android:textStyle="bold"/>
    </RelativeLayout>

</ScrollView>