<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity11">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:id="@+id/pd"
          android:text="@string/e_d"
          android:textSize="25sp"
          android:textStyle="bold"
          android:layout_margin="10dp"/>
      <EditText
          android:id="@+id/det0"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/us_na"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/pd"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/P_wd"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/det0"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/FNa"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/det1"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/MNa"
          android:textSize="20sp"
          android:layout_margin="10dp"
          android:layout_below="@id/det2"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/LNa"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/det3"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phno"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/det4"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_below="@id/det5"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/city"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:textSize="20sp"
          android:layout_below="@id/det6"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/st"
          android:textSize="20sp"
          android:layout_below="@id/det7"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:textStyle="bold" />
      <EditText
          android:id="@+id/det9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/pin"
          android:textSize="20sp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginBottom="20dp"
          android:layout_below="@id/det8"
          android:textStyle="bold" />
      <Button
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_centerHorizontal="true"
          android:text="DONE"
          android:textStyle="bold"
          android:textSize="20sp"
          android:id="@+id/done"
          android:layout_margin="50dp"
          android:layout_below="@id/det9"/>
  </RelativeLayout>
</ScrollView>