<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_marginTop="200dp"
       android:layout_centerHorizontal="true"
       android:id="@+id/logo"
       android:src="@drawable/app_logo"/>
      <EditText
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="50dp"
       android:layout_marginRight="50dp"
       android:id="@+id/User"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/logo"
       android:hint="@string/us_na"/>
      <EditText
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/Pass"
       android:layout_marginLeft="50dp"
       android:layout_marginRight="50dp"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/User"
       android:hint="@string/P_wd"/>
      <Button
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/Log"
       android:text="@string/L_in"
       android:layout_centerHorizontal="true"
       android:layout_marginLeft="150dp"
       android:layout_marginRight="150dp"
       android:layout_below="@id/Pass"
       android:layout_marginTop="20dp"
       android:onClick="login"
       android:textStyle="bold"
       android:textSize="16sp"/>
    </RelativeLayout>
</ScrollView>